--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "mongoose": "^5.2.2"
+    "express-session": "^1.15.6",
+    "mongoose": "^5.2.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
+    "passport-yandex": "0.0.3",
+    "serve-static": "^1.13.2"
   }
 }
